# aurix-cmake-code-sample

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: tricore-clion-config.yaml  tricore_opensource_toolchain.cmake
src/: CMakeLists.txt  Cpu0_Main.c
